--- a/设计文档/files/实现文档.md
+++ b/设计文档/files/实现文档.md
@@ -365,6 +365,261 @@ class Announcement(models.Model):
         ]
 ```
 
+## 三、系统重要功能实现
+
+### 3.1 用户鉴权
+
+我们参照现代网页前端设计，实现了token鉴权机制。当用户尝试进行登录时，服务端会鉴别用户身份并返回一个token。客户端会将这个token保存在cookie中。在登录成功后用户每次向服务端发出请求时都将附带上这个token。服务端可以依据校验该token，判断用户是否成功登录，并进一步获取用户的具体身份。用户鉴权的主要实现逻辑位于`frontend/src/utils/request.js`。
+
+```javascript
+// 用户登录成功后，调用该函数保存用户认证信息：保存用户token，以及设置token过期时间
+function setAuthorization(auth) {
+      Cookie.set(xsrfHeaderName, 'Bearer ' + auth.token, {expires: auth.expireAt})
+}
+
+// 用户退出登录后，调用该函数移除用户认证信息
+function removeAuthorization() {
+      Cookie.remove(xsrfHeaderName)
+}
+```
+
+### 3.2 路由守卫
+
+为了防止未获取权限的用户直接通过网址跳转到需要对应权限的页面，我们设计了全局路由守卫。即在用户进入每个页面之前都对用户的认证信息进行检测：如果检测通过，则跳转到对应页面；如果检测不通过，则跳转到错误处理页面。路由守卫主要处理逻辑位于`frontend/src/router/guards.js`中。
+
+我们会在页面路由设置文件(`frontend/src/touter/config.js`)中规定进入相应页面所需的权限，如下所示：
+
+```javascript
+{
+  path: 'announcementPage',   // 这是公告界面，所有登录用户均可查看
+  name: '公告',
+  meta: {
+    icon: 'dashboard',
+    page: {
+      closable: false
+    },
+  },
+  component: () => import('@/pages/announcementPage'),
+},
+{
+  path: 'jobSeekPage', // 这是针对教师的求职页面
+  name: "广场",
+  meta: {
+    icon: "team",
+    authority: {
+      role: 'teacher',     // 设置该页面只有role为'teacher'的用户才能进入
+    }
+  },
+  component: () => import('@/pages/jobSeekPage')
+},
+{
+  path : "hirePage", // 这是针对学生的招聘页面
+  name: "广场",
+  meta: {
+    icon: "team",
+    authority: {
+      role: 'student'     // 设置该页面只有role为'student'的用户才能进入
+    }
+  },
+  component: () => import('@/pages/hirePage')
+}
+```
+
+当用户尝试进入某个页面时，首先会经过登录守卫的检测
+
+```javascript
+const loginGuard = (to, from, next, options) => {
+  const {message} = options
+  if (!loginIgnore.includes(to) && !checkAuthorization()) {
+    message.warning('登录已失效，请重新登录')   // 鉴权失败，重定向到登录界面
+    next({path: '/login'})
+  } else {
+    next()    // 鉴权成功，跳转到目标界面
+  }
+}
+```
+
+用户通过登录守卫验证，表示用户已经成功登录。之后用户还需要经过权限守卫的检测
+
+```javascript
+const authorityGuard = (to, from, next, options) => {
+  const {store, message} = options
+  const roles = store.getters['account/roles']
+  if (!hasAuthority(to, roles)) {
+    message.warning(`对不起，您无权访问页面: ${to.fullPath}，请联系管理员`)  // 鉴权失败，跳转到错误处理页面
+    next({path: '/403'})
+    // NProgress.done()
+  } else {
+    next()  // 鉴权成功，跳转到目标页面
+  }
+}
+
+// 检测用户是否具有role权限
+function hasAuthority(route, roles) {
+  const authorities = [...route.meta.pAuthorities, route.meta.authority]
+  for (let authority of authorities) {
+    if (!hasRole(authority, roles)) {
+      return false
+    }
+  }
+  return true
+}
+
+// 检测用户的roles列表中是否含有页面所需的role权限
+function hasRole(authority, roles) {
+  let required = undefined
+  if (typeof authority === 'object') {
+    required = authority.role
+  }
+  return hasAnyItem(required, roles, (r, t) => !!(r === t || r === t.id))
+}
+```
+
+用户通过权限守卫，表示用户拥有目标页面所需的权限。
+
+用户通过登录守卫与权限守卫后，即可进入目标页面。
+
+### 3.3 动态路由匹配
+
+我们有时需要把某种模式匹配到的所有路由全都映射到同样的组件中。例如**学生主页**页面，**家教主页**页面，**帖子详情**页面，这时我们可以采用动态路由匹配：一组页面的组件设计相同，客户端通过具体指定的参数来决定具体跳转的目标页面。如下所示：
+
+```javascript
+{
+    path: 'user/studentHomePage/:id',
+    name: '学生主页',
+    meta: {
+    invisible: true
+    },
+    component: () => import('@/pages/studentHomePage')
+}
+```
+
+在“学生主页”页面中，我们使用了动态路由参数，该页面的具体路径将由`$route.params.id`决定。
+
+当我们需要跳转到`id`为`22373090`的页面时，可以这么编写代码
+
+```javascript
+this.$router.push({ name: '学生主页', params: { id: "22373090" } })
+```
+
+动态路由参数通过`route`直接获取
+
+```javascript
+userId: this.$route.params.id // 获取路由参数中的id
+```
+
+页面的具体信息可以通过`api`从服务端调取
+
+```javascript
+created() {    // 创建“学生主页”页面时，调用fetchUserInfo获取用户信息
+    this.fetchUserInfo();
+},
+methods: {
+    fetchUserInfo() {
+        // 调用 getUserInfo api，获取用户信息
+        getStudentInfo(this.userId)
+            .then(response => {
+                // ...
+            })
+            .catch(error => {
+                // ...
+            });
+    }
+}
+```
+
+具体实现效果如下
+
+![](..\picture\动态路由示例.png)
+
+### 3.4 文件上传
+
+在我们使用的Vue2中，文件需要包装在`FormData`对象的`file`段中，才能与后端进行通信。如果此外还有其它数据，可以以`json`的形式包装在`FormData`对象的`data`段中，如下所示
+
+```javascript
+submitLearningMaterial() {
+    const formData = new FormData();
+    formData.append('file', this.fileList[0]);   // 将文件添加到formData的file段
+    const jsonData = {
+        id: this.currUser.id,
+        teacher: this.currUser.name,
+        studentId: this.curStudentId,
+    };
+    formData.append('data', JSON.stringify(jsonData));  // 将其他数据以json形式添加到data段中
+
+    submitLearningMaterial(formData).then(res => {   // 通过api与后端进行通信
+        // ...
+    }).catch(error => {
+        // ...
+    });
+}
+```
+
+### 3.5 文件下载
+
+为了实现对用户上传的头像/文件进行云端存储，我们使用了MinIO进行对象存储。
+
+MinIO是一个对象存储解决方案，它提供了与Amazon Web Services S3兼容的API，并支持所有核心S3功能。使用文档参照[MinIO Windows中文文档](https://minio.org.cn/docs/minio/linux/index.html)
+
+我们从华为云租借了服务器（120.46.1.4），并将MinIO部署在该服务器上。实现效果如下
+
+![](..\picture\MinIO.png)
+
+![](..\picture\MinIO_2.png)
+
+我们还对上传文件以及下载文件的接口进行了包装，使其使用起来更加方便
+
+```python
+from minio import Minio
+
+minio_url = "120.46.1.4:9000"
+minio_access_key = "****"
+minio_secret_key = "****"
+
+def get_download_url(file_name, type) -> str:
+    """
+    获取文件名为file_name文件的下载链接
+    @param file_name: 文件名称
+    @param type: 文件类型
+    """
+    return "http://" + minio_url + "/zxb/" + type + "/" + file_name
+
+
+class MinioClient:
+    def __init__(self):
+        self.client = Minio(endpoint=minio_url, access_key=minio_access_key, secret_key=minio_secret_key, secure=False)
+
+    def upload_file(self, data, file_name, type)
+    """
+	上传文件
+	@param data: 文件的二进制流数据
+	@param file_name：文件存储在云端的名称
+	@param type: 文件类型
+	"""
+```
+
+我们可以调用`upload_file`上传文件，调用`get_download_url`获取文件的下载链接，使用示例如下
+
+```python
+def submitLearningMaterial(request):
+    # ...
+    file = request.FILES['file']  # 获取上传的文件
+    file_name = file.name
+    file_type = file_name.split('.')[-1]
+
+    unique_file_name = f"{uuid.uuid4()}.{file_type}" # 使用uuid生成唯一文件名，避免文件名重复发生覆盖
+
+    minio = MinioClient()
+    file_data = file.read() # 获取文件的二进制数据
+    minio.upload_file(file_data, unique_file_name, file_type) # 上传文件
+    download_link = get_download_url(unique_file_name, file_type) # 获取下载链接
+    
+    # ...
+```
+
+我们通过这种设计，成功实现了”**学习资料**“以及”**用户头像**“相关功能。
+
+
 ### 3.7 存储过程
 ### 3.7.1 用户管理（注册/登录）
 1. 用户注册
@@ -1541,3 +1796,186 @@ def deleteUser(request):
         return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
 ```
 
+## 四、系统实现效果
+
+### 4.1 登录注册
+
+#### 4.1.1 登录
+
+![](..\picture\登录界面_1.png#pic_center)
+
+进入网站，或者在未登录的情况下访问网站页面都将跳转到首页，在这个页面用户可以进行登录，输入正确的用户名以及密码即可登录成功。
+
+#### 4.1.2 注册
+
+![](..\picture\登录界面_2.png)
+
+用户可以在首页的标签页进行注册。填写用户名、密码，以及确认密码、身份之后即可成功注册。本系统的管理员账号由后端分配，不可直接注册。
+
+#### 4.1.3 退出登录
+
+![](..\picture\退出登录.png)
+
+在登录成功后的主页面中，点击右上角的用户名可以展开下属的选择框可以选择退出登录。随后页面便会删除当前用户的登录认证信息。用户将会跳转到登录页面。
+
+#### 4.1.4 修改密码
+
+![](..\picture\修改密码.png)
+
+在相同的选择框中可以选择**修改密码**，之后便会弹出修改密码对话框。
+
+![](..\picture\修改密码_2.png)
+
+在经过前端验证“新密码”和“确认密码”一致、后端验证旧密码一致后即可修改密码。之后页面将会删除当前用户的登录认证信息。用户将会跳转到登录界面。
+
+### 4.2 个人主页
+
+![](..\picture\选择个人主页.png)
+
+在登录成功后的主页面中，点击右上角的用户名可以展开下属的选择框可以选择**个人主页**以查看个人主页。对于学生和家教两种不同的身份，个人主页的展示内容有所不同，主要区别在于是否有评论展示区以及评分展示区。
+
+#### 4.2.1 学生个人主页
+
+![](..\picture\学生个人主页.png)
+
+学生个人主页按照从上到下，从左到右的顺序展示姓名、个性签名、性别、年龄、年级、邮箱、电话、地址、以及个人简介。
+
+#### 4.2.2 家教个人主页
+
+![](..\picture\教师个人主页.png)
+
+家教个人主页按照从上到下，从左到右的顺序展示姓名、个性签名、评分、评分人数、性别、年龄、学历、邮箱、电话、地址、个人简介以及用户评论。
+
+#### 4.2.3 编辑个人主页
+
+![](..\picture\选择编辑个人主页.png)
+
+在用户名下属的选择框中选择**编辑个人主页**可以对个人主页信息进行编辑。
+
+![](..\picture\编辑个人主页_家教.png)
+
+![](..\picture\编辑个人主页_学生.png)
+
+学生和家教的”编辑个人主页“页面大致相同。唯一的区别在于家教页面的”学历“一栏，在学生页面中显示为”年级“。
+
+### 4.3 消息通知
+
+![](..\picture\通知.png)
+
+点击顶栏的”闹钟“图标即可展开通知。当发生”帖子通过审核“”有新的公告“”家教发布学习资料“”请求建立师生关系“”成功建立师生关系“等多种情况时都会产生通知信息，以便用户及时获取重要信息。
+
+### 4.4 侧边栏
+
+![](..\picture\侧边栏.png)
+
+在每个页面的左侧都存在侧边栏，用户可以在侧边栏中选择页面进行跳转。对于不同的身份（学生，家教，管理员），侧边栏包含的页面不同。公有的页面为“公告”与“广场”。学生独有的页面为“我要招聘”和“我的学习”。家教独有的页面为“我要求聘”和“我的工作”。管理员页面独有的页面为“用户管理”与“发布公告”。
+
+### 4.5 公告
+
+#### 4.5.1 查看公告
+
+![](..\picture\公告页.png)
+
+在登录成功或者注册成功后用户会跳转到**公告页面**，在欢迎信息之下便是公告展示框，用户可以对公告标题进行点击以选择需要查看的公告内容。
+
+#### 4.5.2 发布公告
+
+![](..\picture\发布公告.png)
+
+在用户以管理员身份登入后，可以在侧边栏选择”**发布公告**“跳转到发布公告界面。在该界面管理员可以填写公告的内容并进行发布。
+
+### 4.6 广场
+
+#### 4.6.1 帖子检索
+
+![](..\picture\广场.png)
+
+用户可以在侧边栏中选择跳转到**广场页面**。在广场页面，不同的角色所看到的帖子不同。学生可以看到家教们发的求聘帖；家教可以看到学生们发的招聘帖；管理员可以看到所有帖子。
+
+![](..\picture\翻页.png)
+
+网页每次至多加载10篇帖子。用户需要点击页面下方的页码去查看更多的帖子。这样的设计可以使用户界面更加简介，同时减少网页负担。
+
+![](..\picture\帖子点击示例.png)
+
+对于每个帖子，点击作者名（蓝字部分）即可查看作者的个人主页，点击除此之外的任意部分即可查看帖子详情。
+
+![](..\picture\搜索.png)
+
+广场页面的最上方存在搜索框，提供搜索功能，并支持基本的模糊搜索（搜索“北”字，可以检索出所有内容包含“北”字的帖子）
+
+#### 4.6.2 帖子详情
+
+![](..\picture\帖子详情.png)
+
+![](..\picture\帖子详情_2.png)
+
+在广场页面点击帖子即可跳转到**帖子详情**页面，在该页面家教（学生）可以选择接受“**招聘**“（”**求聘**“），管理员可以选择“**通过**”或者“**驳回**”该帖子。只有管理员审核通过的帖子才会进入广场页面。
+
+### 4.7 发帖界面
+
+![](..\picture\发帖界面.png)
+
+学生（家教）用户可以通过在侧边栏选择“**我要招聘（我要求聘）**”跳转到发帖界面。在这个页面用户可以填写自己的基本信息以及需求，并可以对已填写内容进行保存和提交。提交后的帖子经管理员审核通过后便会出现在广场界面。
+
+### 4.8 学生学习界面
+
+![](..\picture\我的学习标签页.png)
+
+学生用户可以通过点击左边侧边栏“**我的学习**”进入学生学习界面。在该界面用户可以通过切换标签页进入“我的帖子”“我的家教”“我的待办”“我的学习资料”四个小标签页。
+
+#### 4.8.1 我的帖子
+
+![](..\picture\我的帖子.png)
+
+![](..\picture\我的帖子_2.png)
+
+在“我的帖子”小标签页中，用户可以浏览自己发布过的帖子，选择查看帖子详情或者删除帖子。
+
+#### 4.8.2 我的家教
+
+![](..\picture\我的家教.png)
+
+![](..\picture\我的家教_2.png)
+
+在“我的家教”小标签页中，学生用户可以查看自己的家教，浏览家教主页，对家教发表评价或者解除师生关系。
+
+![](..\picture\发表评价.png)
+
+在用户点击“发表评价”后，页面右侧将会弹出抽屉以供用户填写评价具体信息。用户提交的评价将会出现在对应家教的个人主页上。
+
+#### 4.8.3 我的待办
+
+![](..\picture\我的待办.png)
+
+在"我的待办"小标签页中，用户可以浏览自己的待办事项，并选择接受或者拒绝。
+
+![](..\picture\我的待办_2.png)
+
+待办事项中的蓝色部分为可跳转链接。以上图为例，当用户点击红框后，页面将分别跳转到对应的帖子详情页面和
+
+对应的家教主页。
+
+#### 4.8.4 我的学习资料
+
+![](..\picture\我的学习资料.png)
+
+在"我的学习资料"小标签页中，学生用户可以查看家教发布的学习资料，并选择进行下载。
+
+### 4.9 家教工作界面
+
+![](..\picture\我的工作.png)
+
+家教的“**我的工作**”界面与学生的“**我的学习**”界面界面大致相同，区别在于家教在”我的学生“标签页下存在”发布学习资料“按钮。
+
+![](..\picture\发布学习资料.png)
+
+在该界面家教可以填写需要上传学习资料，以供学生进行下载。
+
+### 4.10 用户管理
+
+![](..\picture\用户管理.png)
+
+![](..\picture\用户管理_2.png)
+
+在用户以管理员身份登入后，用户可以点击侧边栏的”**用户管理**“按钮进入”用户管理“界面。在该界面，管理员可以查看所有用户的信息并删除用户（将用户加入黑名单）。
