--- a/设计文档/files/总结_张鑫.md
+++ b/设计文档/files/总结_张鑫.md
@@ -2,6 +2,9 @@
 
 本人在本次数据库大作业中与张哲同学共同承担前端的实现。个人工作具体体现为对”学生“以及”家教“两种身份的页面以及相应逻辑的设计、服务器的租借、以及存储容器的实现。除此之外，本人还负责大作业的中期汇报。
 
-从最开始敲定选题到完成整个任务，总共历时三个半月。我出于”想要走出舒适圈，挑战一下未知的领域“的想法，自告奋勇地接下了”前端设计“的任务。结果，我一下子就被应当学习的知识量惊呆了：html、JavaScript、css、Vue，以及路由设置、axios通信、组件设计……
+从最开始敲定选题到完成整个任务，总共历时三个半月。我出于”想要走出舒适圈，挑战一下未知的领域“的想法，自告奋勇地接下了”前端设计“的任务。结果，我一下子就被应当学习的知识量惊呆了：html、JavaScript、css、Vue，以及路由设置、axios通信、组件设计……毫无疑问，数据库作业的难度是巨大的。我甚至可以说，与数据库大作业斗争的三个月是我上大学以来学习知识容量最大的三个月。**但同时，这也是我最充实的三个月**，在面向需求的学习过程中，我对于前端框架越来越熟悉，前端技能越来越娴熟。在最后，我甚至学习了计算机网络的部分内容，成功在自己租借的服务器上实现了MinIO存储容器。
 
-**但我终究还是挺过来了**，在面向需求的学习过程中，我对于前端框架越来越熟悉，对于前端
+团队合作完成大作业的过程，更是让我明白了团队合作的重要性：每个人不仅仅要对自己的部分负责，还要注重与负责下一环节的组员的沟通。我已经不记得有多少次因为api文档描述不清或者前端测试强度不足导致对接出现bug，进而导致整个项目的停摆。
+
+但万幸的是，最后终究是按时完成了。最后的结果虽然算不上多么出类拔萃，但我已然问心无愧。
+
