完成总体结构、前端结构、功能结构、个人总结

--- a/设计文档/files/实现文档.md
+++ b/设计文档/files/实现文档.md
@@ -1,3 +1,37 @@
+## 1.1 体系结构
+
+### 1.1.1 总体结构
+
+本项目采用前后端分离的体系结构，前后端通过api来交换数据。前端通过api向后端请求数据，后端控制器负责根据前端的不同请求， 来对数据库进行存取操作， 进而将数据返回给前端。 前端得到数据后将数据渲染在网页上， 进而实现前后端的交互，如下图所示。
+
+![屏幕截图 2024-12-20 105513](C:\Users\LX\Pictures\Screenshots\屏幕截图 2024-12-20 105513.png)
+
+### 1.1.2 前端结构
+
+**assets**：
+
+用于存储静态资源，例如网站logo、图片、字体。
+
+**components**:
+
+包含多次重复使用的或功能较为独立的Vue组件，例如固定按钮、侧边栏、导航栏、密码修改表单等。
+
+**router**：
+
+存放控制应用路由的JS文件，具体路由配置可参考config.js。
+
+**page**：
+
+存放应用界面的Vue文件，每个子文件夹对应一个具体功能页面。
+
+**services**：
+
+存放api相关JS文件，用于与后端交互。
+
+**mock**：
+
+存放模拟数据和服务器响应，扮演一个临时的、轻量级的服务端角色，帮助我们在没有真实后端API或是在后端API尚未完成的情况下进行前端开发和测试。
+
 ### 1.1.3 后端结构
 
 后端使用Django框架实现。文件结构如下：
@@ -27,6 +61,60 @@
 * **manage.py**
 
   脚本，用于后端的部署、数据库的迁移等。
+
+## 1.2 功能结构
+
+功能架构示意图如下：
+
+![数据库绘图.drawio](D:\数据库绘图.drawio.png)
+
+### 1.3.1 登录注册
+
+* 登录：可以通过输入用户名和对应的正确密码，登录进入功能页面，否则无法进入功能页面。
+* 注册：可通过输入用户名、密码，选择家教或老师的身份，当后台查验无误的时候，即可注册账户。
+* 登出：用户登录后可以选择登出，登出后用户失去访问功能页面的权限。
+* 修改密码：在登陆后可以选择修改密码，用户的密码会被设置成新的密码。
+
+### 1.3.2 个人主页
+
+* 查看个人主页：学生和家教可以查看自己的主页，家教主页会额外显示自己的学生对自己的评价。
+* 编辑个人主页：用户可以随时编辑自己的主页，修改例如年龄、邮箱、联系方式等个人信息。
+
+### 1.3.3 管理端
+
+* 发布公告：管理员可以对所有用户发布公告，用户可以在公告页面查看。
+* 帖子审核：学生和家教发布的帖子需要被管理员审核通过后才会在广场上显示，管理员可驳回待通过的帖子。
+* 用户管理：管理员可以删除任意用户，将其加入黑名单。
+
+### 1.3.4 广场
+
+* 帖子检索：广场提供搜索功能，并支持基本的模糊搜索。
+* 帖子详情：在招聘帖中，家教可以选择接受招聘；在求聘帖中，学生可以选择接收求聘。
+
+### 1.3.5 发帖
+
+学生（家教）用户可以通过在侧边栏选择我要招聘（我要求聘）进入发帖页面，在这个页面用户可以填写自己的基本信息以及需求。
+
+* 保存：用户可以对已填写内容进行保存。
+* 提交：用户可以提交帖子，提交后的帖子经管理员审核通过后便会出现在广场界面。
+
+### 1.3.6 消息通知
+
+当发生”帖子通过审核“”有新的公告“”家教发布学习资料“”请求建立师生关系“”成功建立师生关系“等多种情况时都会产生通知信息，以便用户及时获取重要信息。
+
+### 1.3.7 学生学习
+
+* 学生可以查看自己发布过的帖子，可以选择删除之前发布的帖子。
+* 学生可以查看自己的家教信息，选择与其解除师生关系，对家教发表评价。
+* 学生可以浏览自己的待办事项，并选择接受或者拒绝。
+* 学生可以查看家教给自己上传的学习资料。
+
+### 1.3.8 家教工作
+
+* 家教可以查看自己发布过的帖子，可以选择删除之前发布的帖子。
+* 家教可以查看自己的学生信息，选择与其解除师生关系，给学生上传学习资料。
+* 家教可以浏览自己的待办事项，并选择接受或者拒绝。
+* 家教可以查看自己已上传的学习资料。
 
 ## 二、数据库基本表的定义
 
