设计文档与实现文档

--- a/设计文档/files/实现文档.md
+++ b/设计文档/files/实现文档.md
@@ -1,10 +1,12 @@
-## 1.1 体系结构
+## 一、系统结构设计
+
+### 1.1 体系结构
 
 ### 1.1.1 总体结构
 
 本项目采用前后端分离的体系结构，前后端通过api来交换数据。前端通过api向后端请求数据，后端控制器负责根据前端的不同请求， 来对数据库进行存取操作， 进而将数据返回给前端。 前端得到数据后将数据渲染在网页上， 进而实现前后端的交互，如下图所示。
 
-![屏幕截图 2024-12-20 105513](C:\Users\LX\Pictures\Screenshots\屏幕截图 2024-12-20 105513.png)
+![](..\picture\总体结构.png)
 
 ### 1.1.2 前端结构
 
@@ -62,54 +64,54 @@
 
   脚本，用于后端的部署、数据库的迁移等。
 
-## 1.2 功能结构
+### 1.2 功能结构
 
 功能架构示意图如下：
 
-![数据库绘图.drawio](D:\数据库绘图.drawio.png)
+![](..\picture\功能结构.png)
 
-### 1.3.1 登录注册
+### 1.2.1 登录注册
 
 * 登录：可以通过输入用户名和对应的正确密码，登录进入功能页面，否则无法进入功能页面。
 * 注册：可通过输入用户名、密码，选择家教或老师的身份，当后台查验无误的时候，即可注册账户。
 * 登出：用户登录后可以选择登出，登出后用户失去访问功能页面的权限。
 * 修改密码：在登陆后可以选择修改密码，用户的密码会被设置成新的密码。
 
-### 1.3.2 个人主页
+### 1.2.2 个人主页
 
 * 查看个人主页：学生和家教可以查看自己的主页，家教主页会额外显示自己的学生对自己的评价。
 * 编辑个人主页：用户可以随时编辑自己的主页，修改例如年龄、邮箱、联系方式等个人信息。
 
-### 1.3.3 管理端
+### 1.2.3 管理端
 
 * 发布公告：管理员可以对所有用户发布公告，用户可以在公告页面查看。
 * 帖子审核：学生和家教发布的帖子需要被管理员审核通过后才会在广场上显示，管理员可驳回待通过的帖子。
 * 用户管理：管理员可以删除任意用户，将其加入黑名单。
 
-### 1.3.4 广场
+### 1.2.4 广场
 
 * 帖子检索：广场提供搜索功能，并支持基本的模糊搜索。
 * 帖子详情：在招聘帖中，家教可以选择接受招聘；在求聘帖中，学生可以选择接收求聘。
 
-### 1.3.5 发帖
+### 1.2.5 发帖
 
 学生（家教）用户可以通过在侧边栏选择我要招聘（我要求聘）进入发帖页面，在这个页面用户可以填写自己的基本信息以及需求。
 
 * 保存：用户可以对已填写内容进行保存。
 * 提交：用户可以提交帖子，提交后的帖子经管理员审核通过后便会出现在广场界面。
 
-### 1.3.6 消息通知
+### 1.2.6 消息通知
 
 当发生”帖子通过审核“”有新的公告“”家教发布学习资料“”请求建立师生关系“”成功建立师生关系“等多种情况时都会产生通知信息，以便用户及时获取重要信息。
 
-### 1.3.7 学生学习
+### 1.2.7 学生学习
 
 * 学生可以查看自己发布过的帖子，可以选择删除之前发布的帖子。
 * 学生可以查看自己的家教信息，选择与其解除师生关系，对家教发表评价。
 * 学生可以浏览自己的待办事项，并选择接受或者拒绝。
 * 学生可以查看家教给自己上传的学习资料。
 
-### 1.3.8 家教工作
+### 1.2.8 家教工作
 
 * 家教可以查看自己发布过的帖子，可以选择删除之前发布的帖子。
 * 家教可以查看自己的学生信息，选择与其解除师生关系，给学生上传学习资料。
@@ -118,11 +120,20 @@
 
 ## 二、数据库基本表的定义
 
-数据库共包含10个实体，11张表，采用Django提供的数据库访问接口实现数据库表的定义以及访问
+数据库共包含10个实体，11张表，采用Django提供的数据库访问接口实现数据库表的定义以及访问.
 
 ### 2.1 用户管理部分
 
 这部分内容有关用户的管理，主要包括用户的登录、注册、修改密码等功能。该系统中有三类用户，分别为学生、家教和管理员，其中管理员无法注册，只能由超级管理员（网站管理者）手动添加。考虑到老师和学生具有某些共同的性质（例如账号和密码），但是又有一些不同的属性（例如学生有成绩，家教有学生评分等），因此我们将Student和Tutor抽象为User统一管理，通过identity字段区分学生和家教，并通过**user_id**将User与其他表关联。
+
+| 属性名            | 数据类型 | 备注         |
+| ----------------- | -------- | ------------ |
+| user_id           | int      | 主码、主属性 |
+| username          | char     | 主属性       |
+| password          | char     | -            |
+| identity          | int      | -            |
+| registration_date | date     | -            |
+| avatar            | char     | -            |
 
 ```python
 # 用户表 BCNF
@@ -132,8 +143,9 @@ class User(models.Model):
     # 主属性
     username = models.CharField(max_length=255)
     password = models.CharField(max_length=255)
-    identity = models.IntegerField()  # 0: 管理员,1: 家教, 2: 学生
+    identity = models.IntegerField()
     registration_date = models.DateField()
+    avatar = models.CharField(max_length=255,blank=True,null=True)
 
     def __str__(self):
         return self.username
@@ -212,6 +224,7 @@ class Tutor(models.Model):
 Student与Tutor中存在部分共同的属性，但我们并未将其统一放至User中，这是因为我们认为User应当面向登录部分，而不应该包含过多的个人信息。在项目设计中，个人信息部分在**账户管理**页面进行补充，可以直接对应Student和Tutor表，不会带来冗余操作。
 
 ### 2.2 师生关系管理部分
+
 这部分的表展示师生关系，其具体维护逻辑由于与事务逻辑强相关，我们将其放在下一节中详细讨论，此处仅给出表的定义。
 
 ### Link
@@ -237,6 +250,7 @@ class Link(models.Model):
 师生关系Link与学生、家教这两个用户通过外码关联，保证了数据的一致性。
 
 ### 2.3 帖子管理部分
+
 这部分内容有关帖子的管理。帖子是家教平台的核心内容，学生与家教的关系通过帖子建立，后续一系列逻辑也从帖子展开。由于学生和家教发布的帖子内容字段相同，我们将其统一放在Post表中，通过**user_id**区分发布者是学生还是家教。
 
 ### Post
@@ -279,6 +293,7 @@ class Post(models.Model):
 ```
 
 ### PostSubject
+
 这个属性的设置是由于每条帖子的subject是一个列表，为规避表中套表的嫌疑，将关系模式规范到3NF及以上，我们将subject单独拿出来，通过外码与Post关联。
 
 | 属性名         | 数据类型 | 备注                           |
@@ -298,6 +313,7 @@ class PostSubject(models.Model):
 ```
 
 ### 2.4 其他事务部分
+
 这部分内容有关其他事务的管理，主要包括通知、学习资料、评价、待办事项、管理员公告等功能。
 
 ### Notification
@@ -707,9 +723,10 @@ def submitLearningMaterial(request):
 
 我们通过这种设计，成功实现了”**学习资料**“以及”**用户头像**“相关功能。
 
+### 3.6 存储过程
 
-### 3.7 存储过程
-### 3.7.1 用户管理（注册/登录）
+### 3.6.1 用户管理（注册/登录）
+
 1. 用户注册
 
 * **涉及的基本表**：`User`，`Student`，`Tutor`
@@ -824,7 +841,7 @@ def resetPassword(request):
         return JsonResponse({'code': -1, 'message': '仅支持POST请求'})
 ```
 
-### 3.7.2 帖子广场管理
+### 3.6.2 帖子广场管理
 1. 发帖
 
 * **涉及的基本表**：`Post`，`PostSubject`
@@ -1124,7 +1141,7 @@ def getPost(request):
             return JsonResponse({'code': -1, 'message': '帖子不存在'})
 ```
 
-### 3.7.3 师生个人信息管理
+### 3.6.3 师生个人信息管理
 1. 更新学生信息
 * **涉及的基本表**：`Student`
 * **过程描述**：更新学生的个人信息。
@@ -1332,7 +1349,7 @@ def getAvatar(request):
 ```
 
 
-### 3.7.4 个人工作管理
+### 3.6.4 个人工作管理
 1. 获取本人发布的所有帖子
 * **涉及的基本表**：`Post`，`PostSubject`
 * **过程描述**：获取用户发布的所有帖子。注意，有别于帖子广场，未经审核的帖子也会在这里显示。
@@ -1741,7 +1758,7 @@ def getAnnouncements(request):
 ```
 
 
-### 3.7.5 管理员事务管理
+### 3.6.5 管理员事务管理
 1. 获取用户身份
 * **涉及的基本表**：`User`
 * **过程描述**：管理员可以获取用户的身份。
@@ -2067,3 +2084,33 @@ def deleteUser(request):
 ![](..\picture\用户管理_2.png)
 
 在用户以管理员身份登入后，用户可以点击侧边栏的”**用户管理**“按钮进入”用户管理“界面。在该界面，管理员可以查看所有用户的信息并删除用户（将用户加入黑名单）。
+
+## 五、组员大作业总结
+
+### 个人总结_张哲（组长）
+
+我在这次数据库大作业中和张鑫同学共同负责前端的实现。我主要负责管理员页面的实现和部分美化工作，以及和周泽同同学共同负责最终的展示汇报。
+
+首先我想谈谈在历时一整个学期的大作业完成中，我个人的一些收获。首先就是对于web开发前端设计的知识的学习，前端涉及html、css、javaScript、vue的方面的知识，知识面要求很广。所幸张鑫同学承担起了底层架构的实现，我只需要在他的基础上进行页面的添加就可以，不过我也对这些知识有了较深的理解。除此之外我还学习mysql语言的一些知识，这在链接GaussDB时起到了帮助。有了一定对前端开发的基础认识，我认为在下学期的软工学习中，我可以更加得心应手，并继续增强我的前端知识学习。最后我深刻认识到了大作业完成过程中团队合作的重要性，只有前后端及时沟通，才能避免很多bug的产生，也会提高整体开发的效率，在完成自己任务的同时，也要考虑如何为另一部分的同学减轻任务，这就要求我们仔细设计接口。
+
+总而言之，这学期的数据库大作业具有挑战但又充满收获，我感到十分自豪和快乐。
+
+### 个人总结_周泽同
+
+我在这次数据库大作业中承担后端的实现。由于张鑫同学提出想要写前端的想法，我和张哲本来打算一起进行后端的实现。后来发现前端的工作量似乎更大，因此张哲同学决定去和张鑫一起写前端，我来承担后端的工作。后端使用django框架进行开发，主要负责数据模型的设计和前端api的实现。除此之外，我还负责了最终答辩的演讲。
+
+最开始写后端的时候，我并没有网页开发的经验，也没有接触过django框架，因此需要自学相关知识。不过付出了一定学习成本后，我发现django的使用还是非常方便的，与一般的python代码编写过程基本类似，多出的数据库迁移等操作也只需要按部就班地完成即可。令我印象比较深刻的是数据模型的设计。出于我个人的工作习惯，我后端的基本框架搭建在学期刚开始时就已经逐步进行了，当时理论课尚未讲到数据库设计部分，因此我数据模型的设计完全是靠感觉，没有经过严谨细致的思考。后来随着需求的逐步调整和细化，以及实验对于关系模式3NF以上的要求，我不得不对数据模型进行了多次调整。如果模型经历了大改，django的自动迁移可能无法完成冲突的消除，因此我还进行了几次删掉本地数据库重新构建的过程。不过好在经过不断的打磨，我们数据模型的设计总体还是比较简洁合理的，也全部达到了BCNF。
+
+由于后端负责需求的具体实现，系统的bug大多会在我这里测试发现。通过打印、调试、F12开发者工具等手段，我对bug进行"分锅"，将前端的bug反映给前端的同学进行处理，后端的bug则自己进行修复。这里需要感谢jzq同学，在我们系统大致完工后义务担任我们的“测试员”一职，发现了许多或许“刁钻”但又十分合理的bug，让我们进行了不情愿但又快乐的返工。经过不断地“磨”，我们的系统也臻于完善了。
+
+总而言之，言而总之，大作业也是有惊无险地结束了。有了这次的开发经历，或许我也逐渐从一个计算机专业的学生，变成了一个小小的菜鸟“程序员”吧。
+
+### **个人总结_张鑫**
+
+本人在本次数据库大作业中与张哲同学共同承担前端的实现。个人工作具体体现为对”学生“以及”家教“两种身份的页面以及相应逻辑的设计、服务器的租借、以及存储容器的实现。除此之外，本人还负责大作业的中期汇报。
+
+从最开始敲定选题到完成整个任务，总共历时三个半月。我出于”想要走出舒适圈，挑战一下未知的领域“的想法，自告奋勇地接下了”前端设计“的任务。结果，我一下子就被应当学习的知识量惊呆了：html、JavaScript、css、Vue，以及路由设置、axios通信、组件设计……毫无疑问，数据库作业的难度是巨大的。我甚至可以说，与数据库大作业斗争的三个月是我上大学以来学习知识容量最大的三个月。***\*****但同时，这也是我最充实的三个月*****\***，在面向需求的学习过程中，我对于前端框架越来越熟悉，前端技能越来越娴熟。在最后，我甚至学习了计算机网络的部分内容，成功在自己租借的服务器上实现了MinIO存储容器。
+
+团队合作完成大作业的过程，更是让我明白了团队合作的重要性：每个人不仅仅要对自己的部分负责，还要注重与负责下一环节的组员的沟通。我已经不记得有多少次因为api文档描述不清或者前端测试强度不足导致对接出现bug，进而导致整个项目的停摆。
+
+但万幸的是，最后终究是按时完成了。最后的结果虽然算不上多么出类拔萃，但我已然问心无愧。
