--- a/设计文档/files/设计文档.md
+++ b/设计文档/files/设计文档.md
@@ -101,6 +101,17 @@
 
 #### 1.3.1 用户管理部分
 
+**User**
+
+| 属性名            | 数据类型 | 说明         |
+| ----------------- | -------- | ------------ |
+| user_id           | int      | 用户编号     |
+| username          | char     | 用户名       |
+| password          | char     | 用户密码     |
+| identity          | int      | 用户身份     |
+| registration_date | date     | 用户注册日期 |
+| avatar            | char     | 用户头像     |
+
 **Student**
 
 | 字段名称 | 数据类型 | 说明         |
